--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
   <div class="container">
     <h1>Collecting height</h1>
     <h3>Please fill the information to see the average height of people</h3>
+    <div class="message">
+      {{ text| safe }}
+    </div>
     <form action="{{ url_for('success') }}" method="POST">
         <input required type="email" placeholder="Enter your email here" title="Your email is safe with us" name="email_id"> 
         <br>  <!-- 'name' will be used by python later --> 
